--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,36 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/.gradle/
-/.settings/
-/bin
-!/gradle/wrapper/gradle-wrapper.jar
+@ -1,14 +1,22 @@
 /build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# Cache of project
+.gradletasknamecache
+# gradle
+build
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+# other
+eclipse
+run
+.gradle
+build.properties
+.classpath
+.classpath
